--- a/KodiBuildsTV/app/src/main/res/layout/activity_main.xml
+++ b/KodiBuildsTV/app/src/main/res/layout/activity_main.xml
@@ -106,20 +106,22 @@
 
     <Button
         android:id="@+id/kodi64"
-        android:layout_width="220dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="565dp"
-        android:layout_marginTop="420dp"
+        android:layout_width="265dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="545dp"
+        android:layout_marginTop="405dp"
+        android:background="@android:color/transparent"
         android:text="@string/download_kodi_arm64_v8a"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/kodi32"
-        android:layout_width="220dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="565dp"
+        android:layout_width="265dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="545dp"
         android:layout_marginTop="455dp"
+        android:background="@android:color/transparent"
         android:text="@string/download_kodi_armeabi_v7a"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -129,8 +131,8 @@
         android:id="@+id/readme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="440dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="436dp"
+        android:layout_marginTop="52dp"
         android:contentDescription="@string/image"
         android:src="@drawable/readmexml"
         app:layout_constraintStart_toStartOf="parent"
